extends Control
class_name CrystalCounter

# –ö—Ä–∏—Å—Ç–∞–ª–ª-—Å—á–µ—Ç—á–∏–∫ –æ—Å–∫–æ–ª–∫–æ–≤ –≤ –ø—Ä–∞–≤–æ–º –≤–µ—Ä—Ö–Ω–µ–º —É–≥–ª—É

@export var crystal_texture_number: int = 17  # –¢–µ–∫—Å—Ç—É—Ä–∞ –∫—Ä–∏—Å—Ç–∞–ª–ª–∞ 17.png
@export var max_shards: int = 5  # –ú–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ –æ—Å–∫–æ–ª–∫–æ–≤ –¥–ª—è —Å–±–æ—Ä–∞

var current_shards: int = 0
var base_path: String = "res://assets/rpg cutie/"

@onready var crystal_sprite: TextureRect = $CrystalSprite
@onready var shard_label: Label = $ShardLabel

func _ready():
	# –î–æ–±–∞–≤–ª—è–µ–º –≤ –≥—Ä—É–ø–ø—É –¥–ª—è –ø–æ–∏—Å–∫–∞
	add_to_group("crystal_counter")
	
	# –ó–∞–≥—Ä—É–∂–∞–µ–º —Ç–µ–∫—Å—Ç—É—Ä—É –∫—Ä–∏—Å—Ç–∞–ª–ª–∞
	set_crystal_texture(crystal_texture_number)
	
	# –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º —Ç–µ–∫—Å—Ç
	setup_label()
	
	# –°–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∏—Ä—É–µ–º —Å GameStateManager
	sync_with_game_state()
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è–º GameStateManager
	setup_game_state_connection()
	
	# –û–±–Ω–æ–≤–ª—è–µ–º –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏–µ
	update_display()
	
	print("–ö—Ä–∏—Å—Ç–∞–ª–ª-—Å—á–µ—Ç—á–∏–∫ —Å–æ–∑–¥–∞–Ω. –ù—É–∂–Ω–æ —Å–æ–±—Ä–∞—Ç—å –æ—Å–∫–æ–ª–∫–æ–≤: ", max_shards)

func sync_with_game_state():
	"""–°–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∏—Ä—É–µ—Ç —Å—á–µ—Ç—á–∏–∫ —Å GameStateManager"""
	var game_state = get_node_or_null("/root/GameStateManager")
	if game_state:
		current_shards = game_state.get_collected_crystals()
		max_shards = game_state.get_max_crystals()
		print("üîÑ –°–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∞—Ü–∏—è —Å GameStateManager: ", current_shards, "/", max_shards)

func set_crystal_texture(texture_number: int):
	"""–£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç —Ç–µ–∫—Å—Ç—É—Ä—É –∫—Ä–∏—Å—Ç–∞–ª–ª–∞"""
	var texture_path = base_path + str(texture_number) + ".png"
	
	var texture = load(texture_path)
	if texture and crystal_sprite:
		crystal_sprite.texture = texture
		print("–£—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∞ —Ç–µ–∫—Å—Ç—É—Ä–∞ –∫—Ä–∏—Å—Ç–∞–ª–ª–∞: ", texture_number)
	else:
		print("–ù–µ —É–¥–∞–ª–æ—Å—å –∑–∞–≥—Ä—É–∑–∏—Ç—å —Ç–µ–∫—Å—Ç—É—Ä—É –∫—Ä–∏—Å—Ç–∞–ª–ª–∞: ", texture_path)

func setup_label():
	"""–ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ—Ç —Ç–µ–∫—Å—Ç —Å—á–µ—Ç—á–∏–∫–∞"""
	if shard_label:
		# –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º —à—Ä–∏—Ñ—Ç –∏ —Ä–∞–∑–º–µ—Ä
		shard_label.add_theme_font_size_override("font_size", 16)
		shard_label.add_theme_color_override("font_color", Color.WHITE)
		shard_label.add_theme_color_override("font_shadow_color", Color.BLACK)
		shard_label.add_theme_constant_override("shadow_offset_x", 1)
		shard_label.add_theme_constant_override("shadow_offset_y", 1)
		
		# –í—ã—Ä–∞–≤–Ω–∏–≤–∞–Ω–∏–µ –ø–æ —Ü–µ–Ω—Ç—Ä—É
		shard_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		shard_label.vertical_alignment = VERTICAL_ALIGNMENT_CENTER

func update_display():
	"""–û–±–Ω–æ–≤–ª—è–µ—Ç –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏–µ —Å—á–µ—Ç—á–∏–∫–∞"""
	if shard_label:
		shard_label.text = str(current_shards) + "/" + str(max_shards)

func add_shard(amount: int = 1):
	"""–î–æ–±–∞–≤–ª—è–µ—Ç –æ—Å–∫–æ–ª–∫–∏"""
	current_shards = min(current_shards + amount, max_shards)
	update_display()
	
	print("–°–æ–±—Ä–∞–Ω–æ –æ—Å–∫–æ–ª–∫–æ–≤: ", current_shards, "/", max_shards)
	
	# –°–∏–Ω—Ö—Ä–æ–Ω–∏–∑–∏—Ä—É–µ–º —Å GameStateManager
	var game_state = get_node_or_null("/root/GameStateManager")
	if game_state:
		# –û–±–Ω–æ–≤–ª—è–µ–º —Å–æ—Å—Ç–æ—è–Ω–∏–µ –≤ GameStateManager
		game_state.collected_crystals = current_shards
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, —Å–æ–±—Ä–∞–Ω—ã –ª–∏ –≤—Å–µ –æ—Å–∫–æ–ª–∫–∏
	if current_shards >= max_shards:
		on_all_shards_collected()

func remove_shard(amount: int = 1):
	"""–£–±–∏—Ä–∞–µ—Ç –æ—Å–∫–æ–ª–∫–∏"""
	current_shards = max(current_shards - amount, 0)
	update_display()
	
	print("–ü–æ—Ç–µ—Ä—è–Ω–æ –æ—Å–∫–æ–ª–∫–æ–≤: ", amount, ". –û—Å—Ç–∞–ª–æ—Å—å: ", current_shards, "/", max_shards)

func set_shards(amount: int):
	"""–£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç —Ç–æ—á–Ω–æ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ –æ—Å–∫–æ–ª–∫–æ–≤"""
	current_shards = clamp(amount, 0, max_shards)
	update_display()

func get_shards() -> int:
	"""–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Ç–µ–∫—É—â–µ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ –æ—Å–∫–æ–ª–∫–æ–≤"""
	return current_shards

func is_complete() -> bool:
	"""–ü—Ä–æ–≤–µ—Ä—è–µ—Ç, —Å–æ–±—Ä–∞–Ω—ã –ª–∏ –≤—Å–µ –æ—Å–∫–æ–ª–∫–∏"""
	return current_shards >= max_shards

func on_all_shards_collected():
	"""–í—ã–∑—ã–≤–∞–µ—Ç—Å—è –∫–æ–≥–¥–∞ –≤—Å–µ –æ—Å–∫–æ–ª–∫–∏ —Å–æ–±—Ä–∞–Ω—ã"""
	print("üîÆ –í–°–ï –û–°–ö–û–õ–ö–ò –°–û–ë–†–ê–ù–´! –ö–≤–µ—Å—Ç –≤—ã–ø–æ–ª–Ω–µ–Ω!")
	
	# –≠—Ñ—Ñ–µ–∫—Ç –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è
	show_completion_effect()

func show_completion_effect():
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç —ç—Ñ—Ñ–µ–∫—Ç –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è —Å–±–æ—Ä–∞"""
	if crystal_sprite:
		# –ê–Ω–∏–º–∞—Ü–∏—è –º–∏–≥–∞–Ω–∏—è
		var tween = create_tween()
		tween.set_loops(3)
		tween.tween_property(crystal_sprite, "modulate", Color.GOLD, 0.3)
		tween.tween_property(crystal_sprite, "modulate", Color.WHITE, 0.3)

func setup_game_state_connection():
	"""–ü–æ–¥–∫–ª—é—á–∞–µ—Ç—Å—è –∫ GameStateManager –¥–ª—è –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–æ–≥–æ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è"""
	var game_state = get_node_or_null("/root/GameStateManager")
	if game_state:
		# –ò—Å–ø–æ–ª—å–∑—É–µ–º —Ç–∞–π–º–µ—Ä –¥–ª—è –ø–µ—Ä–∏–æ–¥–∏—á–µ—Å–∫–æ–π –ø—Ä–æ–≤–µ—Ä–∫–∏
		var timer = Timer.new()
		timer.wait_time = 0.5  # –ü—Ä–æ–≤–µ—Ä—è–µ–º –∫–∞–∂–¥—ã–µ 0.5 —Å–µ–∫—É–Ω–¥—ã
		timer.timeout.connect(_check_game_state_update)
		timer.autostart = true
		add_child(timer)
		print("üîÑ –ü–æ–¥–∫–ª—é—á–µ–Ω –∫ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è–º GameStateManager")

func _check_game_state_update():
	"""–ü—Ä–æ–≤–µ—Ä—è–µ—Ç –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –≤ GameStateManager"""
	var game_state = get_node_or_null("/root/GameStateManager")
	if game_state:
		var new_shards = game_state.get_collected_crystals()
		if new_shards != current_shards:
			print("üîÑ –û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –∫—Ä–∏—Å—Ç–∞–ª–ª–æ–≤: ", current_shards, " -> ", new_shards)
			current_shards = new_shards
			update_display()

func reset_counter():
	"""–°–±—Ä–∞—Å—ã–≤–∞–µ—Ç —Å—á–µ—Ç—á–∏–∫"""
	current_shards = 0
	update_display()
	print("–°—á–µ—Ç—á–∏–∫ –æ—Å–∫–æ–ª–∫–æ–≤ —Å–±—Ä–æ—à–µ–Ω")